--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <style>
+    body {background-color:#1a202c;}
+   
+    </style>
 </html>
